<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_drawable"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/baseline_arrow_back_ios_24">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bmi_details"
                android:textColor="@color/white"
                android:textSize="23sp">

            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="495dp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/bodygradient"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white2"
                android:layout_marginTop="30dp">

            </View>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white2"
                android:layout_marginTop="50dp">

            </View>
            <LinearLayout
                android:layout_width="600dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/transparent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi"
                    android:textColor="@color/white2"
                    >
                </TextView>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="100dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/my_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:fontFamily="sans-serif"
                    android:text="fhfeq">
                </TextView>

                <View
                    android:id="@+id/my_view"
                    android:layout_width="238dp"
                    android:layout_height="1.5dp"
                    android:background="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/my_text_view">
                </View>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="45dp"
                    android:layout_below="@id/my_view"
                    >

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/text1"
                        android:textSize="12sp">
                    </TextView>

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/text1"
                        android:text="@string/text2"
                        android:textSize="12sp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/text2"
                        android:text="@string/text3"
                        android:textSize="12sp">
                    </TextView>
                </RelativeLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    style="@style/myBtn"
                    android:text="@string/share"
                    android:drawableStart="@drawable/share_svgrepo_com"
                    >
                </androidx.appcompat.widget.AppCompatButton>
                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    >
                </View>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    style="@style/myBtn"
                    android:text="@string/rate"
                    android:drawableStart="@drawable/star_shine_svgrepo_com"
                    >
                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>
        </RelativeLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/uwux"
            >
        </ImageView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>